@@ -10,11 +10,12 @@ to ensure LIB_INSTALL_DIR is absolute before checking.
 
 --- a/cmake/FindPhononInternal.cmake
 +++ b/cmake/FindPhononInternal.cmake
-@@ -123,7 +123,16 @@ endif(APPLE)
+@@ -217,10 +217,15 @@ endif(APPLE)
  # RPATH directories outside the current CMAKE_BINARY_DIR and also the library 
  # install directory. Alex
  set(CMAKE_INSTALL_RPATH_USE_LINK_PATH  TRUE)
--set(CMAKE_INSTALL_RPATH "${LIB_INSTALL_DIR}")
+-list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${LIB_INSTALL_DIR}" _isSystemPlatformLibDir)
+-list(FIND CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "${LIB_INSTALL_DIR}" _isSystemCxxLibDir)
 +if (IS_ABSOLUTE "${LIB_INSTALL_DIR}")
 +    set(_rpath_abs_lib_install_dir "${LIB_INSTALL_DIR}")
 +else()
@@ -22,9 +23,9 @@ to ensure LIB_INSTALL_DIR is absolute before checking.
 +endif()
 +list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${_rpath_abs_lib_install_dir}" _isSystemPlatformLibDir)
 +list(FIND CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "${_rpath_abs_lib_install_dir}" _isSystemCxxLibDir)
-+if("${_isSystemPlatformLibDir}" STREQUAL "-1" AND "${_isSystemCxxLibDir}" STREQUAL "-1")
+ if("${_isSystemPlatformLibDir}" STREQUAL "-1" AND "${_isSystemCxxLibDir}" STREQUAL "-1")
+-   set(CMAKE_INSTALL_RPATH "${LIB_INSTALL_DIR}")
 +   set(CMAKE_INSTALL_RPATH "${_rpath_abs_lib_install_dir}")
-+endif("${_isSystemPlatformLibDir}" STREQUAL "-1" AND "${_isSystemCxxLibDir}" STREQUAL "-1")
+ endif("${_isSystemPlatformLibDir}" STREQUAL "-1" AND "${_isSystemCxxLibDir}" STREQUAL "-1")
  
  
- # Uninstall Target
