@@ -1,6 +1,7 @@
 phonon (4:4.7.0.0-0r1) UNRELEASED; urgency=low
 
   * New upstream release (4.7.0).
+  * Adapt no_rpath.patch to upstream changes.
 
  -- Modestas Vainius <modax@debian.org>  Tue, 05 Nov 2013 09:55:14 +0200
 
